--- a/lecciones/Nomenclatura/Numeracion.html
+++ b/lecciones/Nomenclatura/Numeracion.html
@@ -9,13 +9,12 @@
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap');
 
         :root {
-            --primary: #4F46E5;
-            --primary-dark: #4338CA;
-            --secondary: #10B981;
-            --danger: #EF4444;
-            --warning: #F59E0B;
-            --background: #F3F4F6;
-            --text: #1F2937;
+            --primary: #4CAF50;
+            --primary-dark: #388E3C;
+            --secondary: #FF5722;
+            --dark: #1a1a1a;
+            --dark-light: #2d2d2d;
+            --white: #ffffff;
         }
 
         * {
@@ -27,34 +26,62 @@
 
         body {
             min-height: 100vh;
-            background: linear-gradient(135deg, #6366F1, #4F46E5);
+            background: var(--dark);
+            color: var(--white);
+            position: relative;
+            overflow: hidden;
             display: flex;
             justify-content: center;
             align-items: center;
-            color: var(--text);
             padding: 20px;
         }
 
+        #gameMenu {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
         .game-container {
-            background: white;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
             border-radius: 20px;
             padding: 2rem;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+            border: 1px solid rgba(255, 255, 255, 0.1);
             width: 100%;
             max-width: 600px;
+            animation: fadeInUp 0.5s ease;
         }
+
 
         .header {
             text-align: center;
             margin-bottom: 2rem;
+            position: relative;
         }
 
         .title {
             font-size: 2.5rem;
             font-weight: 800;
-            color: var(--primary);
+            color: var(--white);
+            text-transform: uppercase;
             margin-bottom: 1rem;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+            position: relative;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+        }
+
+        .title::after {
+            content: '';
+            position: absolute;
+            bottom: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100px;
+            height: 4px;
+            background: var(--primary);
+            transition: width 0.3s ease;
         }
 
         .stats {
@@ -65,15 +92,17 @@
         }
 
         .stat-card {
-            background: var(--background);
+            background: rgba(255, 255, 255, 0.1);
             padding: 1rem;
             border-radius: 12px;
             text-align: center;
-            transition: transform 0.3s ease;
+            border-left: 3px solid var(--primary);
+            transition: all 0.3s ease;
         }
 
         .stat-card:hover {
             transform: translateY(-5px);
+            background: rgba(255, 255, 255, 0.15);
         }
 
         .stat-value {
@@ -84,7 +113,7 @@
 
         .stat-label {
             font-size: 0.9rem;
-            color: #6B7280;
+            color: rgba(255, 255, 255, 0.7);
         }
 
         .game-area {
@@ -96,7 +125,7 @@
             font-weight: 800;
             color: var(--primary);
             margin: 1rem 0;
-            text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.1);
+            text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.2);
             animation: numberPop 0.5s ease;
         }
 
@@ -105,23 +134,46 @@
             grid-template-columns: repeat(2, 1fr);
             gap: 1rem;
             margin-top: 2rem;
+            position: relative;
+            z-index: 10;
         }
 
         .option-button {
-            background: white;
-            border: 2px solid var(--primary);
-            color: var(--primary);
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            color: var(--white);
             padding: 1rem;
             border-radius: 12px;
             font-size: 1.2rem;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: all 0.4s ease;
+            position: relative;
+            overflow: hidden;
+            z-index: 20;
+        }
+
+        .option-button::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(45deg,
+                    transparent,
+                    rgba(255, 255, 255, 0.1),
+                    transparent);
+            transition: 0.5s;
+        }
+
+        .option-button:hover::before {
+            left: 100%;
         }
 
         .option-button:hover {
-            background: var(--primary);
-            color: white;
-            transform: scale(1.05);
+            background: rgba(255, 255, 255, 0.2);
+            transform: scale(1.02);
+            border-color: var(--primary);
         }
 
         .difficulty-buttons {
@@ -132,12 +184,13 @@
         }
 
         .difficulty-button {
-            background: var(--background);
+            background: rgba(255, 255, 255, 0.1);
             border: none;
             padding: 0.5rem 1.5rem;
             border-radius: 20px;
             cursor: pointer;
             transition: all 0.3s ease;
+            color: var(--white);
         }
 
         .difficulty-button.active {
@@ -146,7 +199,7 @@
         }
 
         .start-button {
-            background: var(--secondary);
+            background: var(--primary-dark);
             color: white;
             border: none;
             padding: 1rem 3rem;
@@ -155,23 +208,21 @@
             cursor: pointer;
             transition: all 0.3s ease;
             margin-top: 1rem;
-        }
-
-        .number-display[data-tipo]::after {
-            content: attr(data-tipo);
-            font-size: 0.5em;
-            vertical-align: super;
+            border: 1px solid transparent;
         }
 
         .start-button:hover {
-            background: #059669;
+            background: var(--primary);
             transform: scale(1.05);
+            /*Aliniarlo en el centro*/
+
+            border-color: var(--white);
         }
 
         .progress-bar {
             width: 100%;
             height: 8px;
-            background: var(--background);
+            background: rgba(255, 255, 255, 0.1);
             border-radius: 4px;
             margin-top: 1rem;
             overflow: hidden;
@@ -184,6 +235,32 @@
             transition: width linear 1s;
         }
 
+        .number-display[data-tipo]::after {
+            content: attr(data-tipo);
+            font-size: 0.5em;
+            vertical-align: super;
+        }
+
+        .best-score {
+            background: var(--secondary);
+            color: white;
+            padding: 0.5rem 1rem;
+            border-radius: 20px;
+            display: inline-block;
+            margin-bottom: 1rem;
+        }
+
+
+        .correct {
+            background: var(--primary) !important;
+            color: white !important;
+        }
+
+        .incorrect {
+            background: var(--secondary) !important;
+            color: white !important;
+        }
+
         @keyframes numberPop {
             0% {
                 transform: scale(0.5);
@@ -193,6 +270,18 @@
             100% {
                 transform: scale(1);
                 opacity: 1;
+            }
+        }
+
+        @keyframes fadeInUp {
+            0% {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            100% {
+                opacity: 1;
+                transform: translateY(0);
             }
         }
 
@@ -216,25 +305,6 @@
             animation: shake 0.5s ease-in-out;
         }
 
-        .correct {
-            background: var(--secondary) !important;
-            color: white !important;
-        }
-
-        .incorrect {
-            background: var(--danger) !important;
-            color: white !important;
-        }
-
-        .best-score {
-            background: var(--warning);
-            color: white;
-            padding: 0.5rem 1rem;
-            border-radius: 20px;
-            display: inline-block;
-            margin-bottom: 1rem;
-        }
-
         @media (max-width: 600px) {
             .game-container {
                 padding: 1rem;
@@ -251,6 +321,10 @@
             .option-button {
                 font-size: 1rem;
                 padding: 0.8rem;
+            }
+
+            .stats {
+                grid-template-columns: repeat(2, 1fr);
             }
         }
     </style>
@@ -338,12 +412,12 @@
             },
             medio: {
                 tiempo: 8,
-                numeros: [1, 2, 3, 4, 5, 6],
+                numeros: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10],
                 puntosPorAcierto: 20,
                 tipoPrefijo: 'mixto' // mezcla de prefijos numéricos y cadenas de carbono
             },
             dificil: {
-                tiempo: 5,
+                tiempo: 10,
                 numeros: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10],
                 puntosPorAcierto: 30,
                 tipoPrefijo: 'carbono' // solo cadenas de carbono
@@ -358,6 +432,7 @@
                 this.puntos = 0;
                 this.vidas = 3;
                 this.mejorPuntaje = localStorage.getItem('mejorPuntaje') || 0;
+                this.sufijoActual = 'ano'; // Inicialización por defecto
                 this.juegoActivo = false;
                 this.temporizador = null;
                 this.tipoActual = 'numerico'; // tipo de prefijo actual
@@ -418,33 +493,60 @@
                 document.getElementById('scoreDisplay').textContent = this.puntos;
                 document.getElementById('livesDisplay').textContent = this.vidas;
                 document.getElementById('numberDisplay').textContent = this.numeroActual;
-                // Añadir indicador de tipo de prefijo
-                const tipoTexto = this.tipoActual === 'numerico' ? '' : 'ano';
+
+                // Usar el sufijo constante para esta ronda
+                const tipoTexto = this.tipoActual === 'numerico' ? '' : this.sufijoActual;
                 document.getElementById('numberDisplay').setAttribute('data-tipo', tipoTexto);
                 document.getElementById('progressBar').style.width = `${(this.tiempo / NIVELES[this.nivel].tiempo) * 100}%`;
             }
+
+
 
             crearBotonesOpciones(prefijos) {
                 const optionsGrid = document.getElementById('optionsGrid');
                 optionsGrid.innerHTML = '';
 
+                // Reiniciar animación para evitar conflictos
+                optionsGrid.style.animation = 'none';
+
                 prefijos.forEach(prefijo => {
                     const button = document.createElement('button');
                     button.className = 'option-button';
-                    // Añadir sufijo según el tipo de prefijo
-                    const sufijo = this.tipoActual === 'numerico' ? '-' : 'ano';
+
+                    // Usar el sufijo constante de la ronda
+                    const sufijo = this.tipoActual === 'numerico' ? '-' : this.sufijoActual;
                     button.textContent = `${prefijo}${sufijo}`;
                     button.addEventListener('click', () => this.verificarRespuesta(prefijo));
                     optionsGrid.appendChild(button);
                 });
+
+                // Restaurar animación después de un pequeño retraso
+                setTimeout(() => {
+                    optionsGrid.style.animation = '';
+                }, 50);
             }
+
+
+
 
             verificarRespuesta(prefijoSeleccionado) {
                 const prefijosDiccionario = this.tipoActual === 'numerico' ? PREFIJOS : CADENAS_CARBONO;
                 const esCorrecta = prefijoSeleccionado === prefijosDiccionario[this.numeroActual];
-                const sufijo = this.tipoActual === 'numerico' ? '-' : 'ano';
+                const sufijos = ['ano', 'eno', 'ino']; // Lista de sufijos posibles
+
+                // Buscar el botón correspondiente ignorando el sufijo
                 const botonSeleccionado = [...document.getElementsByClassName('option-button')]
-                    .find(button => button.textContent === `${prefijoSeleccionado}${sufijo}`);
+                    .find(button => {
+                        const buttonText = button.textContent;
+                        // Verificar si el texto del botón comienza con el prefijo seleccionado
+                        return sufijos.some(sufijo => buttonText === `${prefijoSeleccionado}${sufijo}`);
+                    });
+
+                // Verificar si el botón existe antes de usarlo
+                if (!botonSeleccionado) {
+                    console.warn('Botón no encontrado o ya eliminado del DOM.');
+                    return;
+                }
 
                 if (esCorrecta) {
                     botonSeleccionado.classList.add('correct');
@@ -464,24 +566,33 @@
                 this.actualizarUI();
             }
 
+
             siguienteRonda() {
                 this.numeroActual = this.generarNumeroAleatorio();
                 const prefijos = this.generarPrefijosAleatorios(this.numeroActual);
+
+                // Seleccionar un sufijo aleatorio solo al inicio de la ronda
+                const sufijos = ['ano', 'eno', 'ino'];
+                this.sufijoActual = this.tipoActual === 'numerico' ? '-' : sufijos[Math.floor(Math.random() * sufijos.length)];
+
                 this.crearBotonesOpciones(prefijos);
                 this.tiempo = NIVELES[this.nivel].tiempo;
                 this.actualizarUI();
+
+                // Reiniciar animación del número
                 document.getElementById('numberDisplay').style.animation = 'none';
                 setTimeout(() => {
                     document.getElementById('numberDisplay').style.animation = 'numberPop 0.5s ease';
                 }, 10);
             }
 
+
             finalizarJuego() {
                 clearInterval(this.temporizador);
                 this.juegoActivo = false;
                 this.actualizarMejorPuntaje();
                 document.getElementById('gameArea').style.display = 'none';
-                document.getElementById('gameMenu').style.display = 'block';
+                document.getElementById('gameMenu').style.display = 'flex';
             }
 
             actualizarMejorPuntaje() {
