--- a/lecciones/Nomenclatura/CarreraQuimica.html
+++ b/lecciones/Nomenclatura/CarreraQuimica.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Chemistry Racer Pro</title>
     <style>
         :root {
-            --primary: #2ecc71;
-            --secondary: #e74c3c;
-            --background: #1a1a2e;
-            --surface: #16213e;
-            --accent: #0f3460;
+            --primary: #4CAF50;
+            --primary-dark: #388E3C;
+            --secondary: #FF5722;
+            --dark: #1a1a1a;
+            --dark-light: #2d2d2d;
+            --white: #ffffff;
         }
 
         body {
             margin: 0;
             padding: 20px;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: var(--background);
-            color: white;
+            background: var(--dark);
+            color: var(--white);
             min-height: 100vh;
         }
 
@@ -24,165 +26,189 @@
             max-width: 900px;
             margin: 0 auto;
             padding: 20px;
-            background: var(--surface);
-            border-radius: 15px;
-            box-shadow: 0 0 30px rgba(0,0,0,0.3);
+            background: rgba(45, 45, 45, 0.8);
+            backdrop-filter: blur(10px);
+            border-radius: 20px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
+            padding-bottom: 15px;
+            border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+        }
+
+        h1 {
+            margin: 0;
+            font-size: 2.5rem;
+            background: linear-gradient(135deg, var(--primary), var(--primary-dark));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            position: relative;
         }
 
         #raceTrack {
             height: 400px;
-            background: var(--accent);
+            background: var(--dark-light);
             position: relative;
             border-radius: 15px;
             margin: 20px 0;
             overflow: hidden;
-            border: 2px solid #2c3e50;
-            box-shadow: inset 0 0 20px rgba(0,0,0,0.3);
+            border: 2px solid rgba(255, 255, 255, 0.1);
+            box-shadow: inset 0 0 40px rgba(0, 0, 0, 0.4);
         }
 
         .lane-divider {
             position: absolute;
             width: 100%;
-            height: 4px;
-            background: repeating-linear-gradient(90deg, #fff, #fff 20px, transparent 20px, transparent 40px);
-            opacity: 0.3;
+            height: 2px;
+            background: repeating-linear-gradient(90deg,
+                    rgba(255, 255, 255, 0.3) 0px,
+                    rgba(255, 255, 255, 0.3) 20px,
+                    transparent 20px,
+                    transparent 40px);
         }
 
         .molecule {
             position: absolute;
             width: 120px;
             height: 70px;
-            border-radius: 10px;
+            border-radius: 15px;
             display: flex;
             align-items: center;
             justify-content: center;
             text-align: center;
-            font-size: 14px;
-            transition: left 0.1s linear;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            font-size: 16px;
+            font-weight: bold;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
         }
 
         #playerMolecule {
             bottom: 20px;
-            background: linear-gradient(135deg, var(--primary), #27ae60);
-            border: 2px solid #2ecc71;
+            background: linear-gradient(135deg, var(--primary), var(--primary-dark));
+            border: 2px solid var(--primary);
         }
 
         #computerMolecule {
             top: 20px;
-            background: linear-gradient(135deg, var(--secondary), #c0392b);
-            border: 2px solid #e74c3c;
+            background: linear-gradient(135deg, var(--secondary), #d84315);
+            border: 2px solid var(--secondary);
         }
 
         .molecule::before {
             content: '';
             position: absolute;
-            top: -10px;
-            left: 50%;
-            transform: translateX(-50%);
-            border-left: 10px solid transparent;
-            border-right: 10px solid transparent;
-            border-bottom: 10px solid currentColor;
-            opacity: 0.7;
-        }
-
-        #inputArea {
-            margin-top: 20px;
-            text-align: center;
-        }
-
-        #userInput {
-            padding: 12px 20px;
-            font-size: 16px;
-            width: 300px;
-            margin-right: 10px;
-            border: none;
-            border-radius: 25px;
-            background: #2c3e50;
-            color: white;
-            box-shadow: inset 0 2px 5px rgba(0,0,0,0.2);
-            transition: all 0.3s ease;
-        }
-
-        #userInput:focus {
-            outline: none;
-            box-shadow: 0 0 0 3px rgba(46, 204, 113, 0.3);
+            inset: 0;
+            border-radius: inherit;
+            padding: 2px;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.2), transparent);
+            -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+            mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+            -webkit-mask-composite: xor;
+            mask-composite: exclude;
         }
 
         .stats {
-            display: flex;
-            justify-content: space-around;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 20px;
             margin: 20px 0;
-            padding: 15px;
-            background: var(--accent);
-            border-radius: 10px;
+            padding: 20px;
+            background: rgba(45, 45, 45, 0.5);
+            border-radius: 15px;
+            backdrop-filter: blur(5px);
         }
 
         .stat-item {
             text-align: center;
+            padding: 15px;
+            border-radius: 10px;
+            background: rgba(255, 255, 255, 0.05);
+            transition: transform 0.3s ease;
+        }
+
+        .stat-item:hover {
+            transform: translateY(-2px);
         }
 
         .stat-value {
-            font-size: 24px;
+            font-size: 28px;
             font-weight: bold;
             color: var(--primary);
-        }
-
-        .stat-label {
-            font-size: 14px;
-            color: #bdc3c7;
+            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
 
         .structure {
             font-family: 'Courier New', monospace;
-            background: #2c3e50;
-            padding: 20px;
-            border-radius: 10px;
+            background: var(--dark-light);
+            padding: 25px;
+            border-radius: 15px;
             margin: 20px 0;
             white-space: pre;
             text-align: center;
-            font-size: 18px;
-            box-shadow: inset 0 2px 5px rgba(0,0,0,0.2);
-            border: 1px solid #34495e;
+            font-size: 20px;
+            box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.3);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            color: #e0e0e0;
         }
 
-        #feedback {
-            margin-top: 15px;
-            min-height: 20px;
-            color: #bdc3c7;
+        #inputArea {
+            margin-top: 25px;
+            text-align: center;
+        }
+
+        #userInput {
+            padding: 15px 25px;
+            font-size: 16px;
+            width: 300px;
+            border: none;
+            border-radius: 25px;
+            background: rgba(255, 255, 255, 0.1);
+            color: var(--white);
+            box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s ease;
+            backdrop-filter: blur(5px);
+        }
+
+        #userInput:focus {
+            outline: none;
+            background: rgba(255, 255, 255, 0.15);
+            box-shadow: 0 0 0 3px rgba(76, 175, 80, 0.3);
+        }
+
+        #userInput::placeholder {
+            color: rgba(255, 255, 255, 0.5);
         }
 
         .particle {
             position: absolute;
             pointer-events: none;
-            background: white;
             border-radius: 50%;
-            animation: particle-animation 1s ease-out forwards;
+            animation: particle-animation 1s cubic-bezier(0.4, 0, 0.2, 1) forwards;
         }
 
         @keyframes particle-animation {
             0% {
-                transform: scale(1);
+                transform: scale(1) rotate(0deg);
                 opacity: 1;
             }
+
             100% {
-                transform: scale(0);
+                transform: scale(0) rotate(360deg);
                 opacity: 0;
             }
         }
 
         .bonus-text {
             position: absolute;
-            color: #2ecc71;
             font-weight: bold;
-            animation: bonus-animation 1s ease-out forwards;
+            animation: bonus-animation 1s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
         }
 
         @keyframes bonus-animation {
@@ -190,6 +216,7 @@
                 transform: translateY(0) scale(1);
                 opacity: 1;
             }
+
             100% {
                 transform: translateY(-50px) scale(1.5);
                 opacity: 0;
@@ -197,32 +224,64 @@
         }
 
         #levelIndicator {
-            position: absolute;
-            right: 20px;
-            top: 20px;
-            background: rgba(0,0,0,0.5);
-            padding: 8px 15px;
-            border-radius: 15px;
-            font-size: 14px;
+            padding: 10px 20px;
+            background: rgba(76, 175, 80, 0.2);
+            border-radius: 20px;
+            font-weight: bold;
+            color: var(--primary);
+            border: 1px solid var(--primary);
         }
 
         .progress-bar {
             width: 100%;
-            height: 8px;
-            background: #34495e;
-            border-radius: 4px;
-            margin-top: 10px;
+            height: 10px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 5px;
+            margin-top: 20px;
             overflow: hidden;
         }
 
         .progress-fill {
             height: 100%;
-            background: var(--primary);
+            background: linear-gradient(90deg, var(--primary), var(--primary-dark));
             width: 0%;
-            transition: width 0.3s ease;
+            transition: width 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            box-shadow: 0 0 10px var(--primary);
+        }
+
+        #feedback {
+            margin-top: 15px;
+            min-height: 20px;
+            font-weight: 500;
+            transition: all 0.3s ease;
+        }
+
+        @media (max-width: 768px) {
+            #gameContainer {
+                padding: 15px;
+            }
+
+            .header h1 {
+                font-size: 1.8rem;
+            }
+
+            #raceTrack {
+                height: 300px;
+            }
+
+            .molecule {
+                width: 100px;
+                height: 60px;
+                font-size: 14px;
+            }
+
+            #userInput {
+                width: 250px;
+            }
         }
     </style>
 </head>
+
 <body>
     <div id="gameContainer">
         <div class="header">
@@ -293,14 +352,32 @@
             {
                 structure: `CH3-CO-CH3`,
                 name: "propanona",
-                difficulty: 1,
+                difficulty: 2,
                 hint: "Cetona de 3 carbonos"
             },
             {
                 structure: `CH3-CH2-CH2-CH2-OH`,
                 name: "butanol",
-                difficulty: 1,
+                difficulty: 2,
                 hint: "Alcohol de 4 carbonos"
+            },
+            {
+                structure: `CH3-CH=CH2`,
+                name: "propeno",
+                difficulty: 2,
+                hint: "Alqueno de 3 carbonos"
+            },
+            {
+                structure: `CH3-CH2-NH2`,
+                name: "etilamina",
+                difficulty: 3,
+                hint: "Amina de 2 carbonos"
+            },
+            {
+                structure: `CH3-O-CH3`,
+                name: "dimetileter",
+                difficulty: 3,
+                hint: "Éter con 2 grupos metilo"
             }
         ];
 
@@ -312,6 +389,7 @@
         let gameActive = true;
         let level = 1;
         let hintUsed = false;
+        let computerSpeed = 2;
 
         const playerMolecule = document.getElementById('playerMolecule');
         const computerMolecule = document.getElementById('computerMolecule');
@@ -323,23 +401,27 @@
         const progressFill = document.getElementById('progressFill');
         const feedback = document.getElementById('feedback');
 
-        function createParticles(x, y, color) {
-            for (let i = 0; i < 10; i++) {
+        function createParticles(x, y, color, count = 10) {
+            for (let i = 0; i < count; i++) {
                 const particle = document.createElement('div');
                 particle.className = 'particle';
-                particle.style.left = x + 'px';
-                particle.style.top = y + 'px';
+                particle.style.left = (x + (Math.random() - 0.5) * 40) + 'px';
+                particle.style.top = (y + (Math.random() - 0.5) * 40) + 'px';
+                particle.style.width = (4 + Math.random() * 4) + 'px';
+                particle.style.height = particle.style.width;
                 particle.style.background = color;
+                particle.style.transform = `rotate(${Math.random() * 360}deg)`;
                 document.getElementById('raceTrack').appendChild(particle);
                 setTimeout(() => particle.remove(), 1000);
             }
         }
 
-        function showBonus(x, y, text) {
+        function showBonus(x, y, text, color = '#4CAF50') {
             const bonus = document.createElement('div');
             bonus.className = 'bonus-text';
             bonus.style.left = x + 'px';
             bonus.style.top = y + 'px';
+            bonus.style.color = color;
             bonus.textContent = text;
             document.getElementById('raceTrack').appendChild(bonus);
             setTimeout(() => bonus.remove(), 1000);
@@ -356,18 +438,24 @@
             structureDisplay.textContent = currentMolecule.structure;
             hintUsed = false;
             resetPositions();
+            moveComputer();
         }
 
         function updateStats(points) {
             score += points;
+            streak = points > 0 ? streak + 1 : 0;
+            attempts++;
+            correct += points > 0 ? 1 : 0;
             scoreDisplay.textContent = score;
             streakDisplay.textContent = streak;
             accuracyDisplay.textContent = Math.round((correct / attempts) * 100) + '%';
             progressFill.style.width = ((score % 100) / 100 * 100) + '%';
 
+            // Nivel del juego aumenta cada 100 puntos
             if (score > 0 && score % 100 === 0) {
                 level = Math.min(5, Math.floor(score / 100) + 1);
                 document.getElementById('levelIndicator').textContent = `Nivel ${level}`;
+                computerSpeed += 1; // Incrementa la velocidad del competidor
             }
         }
 
@@ -375,7 +463,7 @@
             if (!gameActive) return;
             const currentLeft = parseInt(computerMolecule.style.left || 0);
             if (currentLeft < 760) {
-                computerMolecule.style.left = (currentLeft + 2) + 'px';
+                computerMolecule.style.left = (currentLeft + computerSpeed) + 'px';
                 setTimeout(moveComputer, 50);
             } else {
                 endRound(false);
@@ -389,28 +477,27 @@
         function endRound(playerWon) {
             gameActive = false;
             attempts++;
-            
+
             if (playerWon) {
                 correct++;
                 streak++;
                 const points = 10 + (streak * 2) + (level * 5) - (hintUsed ? 5 : 0);
-                createParticles(parseInt(playerMolecule.style.left), 300, '#2ecc71');
+                createParticles(parseInt(playerMolecule.style.left), 300, '#4CAF50');
                 showBonus(parseInt(playerMolecule.style.left), 250, `+${points}`);
                 updateStats(points);
                 feedback.textContent = '¡Correcto! ' + (hintUsed ? '(con pista)' : '');
-                feedback.style.color = '#2ecc71';
+                feedback.style.color = '#4CAF50';
             } else {
                 streak = 0;
                 updateStats(-5);
                 feedback.textContent = `Incorrecto. La respuesta era: ${currentMolecule.name}`;
-                feedback.style.color = '#e74c3c';
+                feedback.style.color = '#FF5722';
             }
 
             userInput.value = '';
             setTimeout(() => {
                 gameActive = true;
                 selectNewMolecule();
-                moveComputer();
             }, 2000);
         }
 
@@ -418,7 +505,7 @@
             if (!gameActive) return;
             const input = e.target.value;
             const currentLeft = parseInt(playerMolecule.style.left || 0);
-            
+
             if (checkAnswer(input)) {
                 playerMolecule.style.left = '760px';
                 endRound(true);
@@ -436,9 +523,9 @@
             }
         });
 
-        // Iniciar juego
+        // Iniciar el juego
         selectNewMolecule();
-        moveComputer();
     </script>
 </body>
+
 </html>
